Add necessaries options in the json

--- a/Web Api/appsettings.json
+++ b/Web Api/appsettings.json
@@ -1,9 +1,25 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "default": "Connection string goes here"
+  },
+  "DatabaseOptions": {
+    "MaxRetryCount": "Max Retry Count goes here"
+  },
+  "HashOptions": {
+    "Iterations": 3500,
+    "KeySize": 64
+  },
+  "JWTOptions": {
+    "ValidIssuer": "Issuer goes here",
+    "ValidAudience": "Audience goes here",
+    "SecretKey": "secret key goes here",
+    "ExpiresIn": 10
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
