Add the new database options

--- a/Web Api/appsettings.json
+++ b/Web Api/appsettings.json
@@ -4,7 +4,10 @@
     "default": "Connection string goes here"
   },
   "DatabaseOptions": {
-    "MaxRetryCount": "Max Retry Count goes here"
+    "MaxRetryCount": "Max Retry Count goes here",
+    "CommandTimeout": "CommandTimeout goes here",
+    "EnableDetailedErrors": "EnableDetailedErrors goes here",
+    "EnableSensitiveDataLogging": "EnableSensitiveDataLogging goes here"
   },
   "HashOptions": {
     "Iterations": 3500,
