--- a/Web Api/appsettings.json
+++ b/Web Api/appsettings.json
@@ -21,7 +21,7 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   }
