Add new field to the json

--- a/Web Api/appsettings.json
+++ b/Web Api/appsettings.json
@@ -13,6 +13,9 @@
     "Iterations": 3500,
     "KeySize": 64
   },
+  "CountryOptions": {
+    "BaseUrl": "https://restcountries.com/v3.1/all?fields=name"
+  },
   "JWTOptions": {
     "ValidIssuer": "Issuer goes here",
     "ValidAudience": "Audience goes here",
